--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "digital-clock",
-  "homepage":"https://sharmadotankit.github.io/Digital-Clock",
+  "homepage":"https://sharmadotankit.github.io/React-Digital-Clock",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
